[package]
authors = ["Christopher Shea <cmshea@gmail.com>"]
categories = ["wasm"]
description = "Glitch a png in wasm"
license = "Apache-2.0/MIT"
name = "pnglitch-wasm"
readme = "./README.md"
repository = "https://github.com/tie-rack/pnglitch"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
js-sys = "0.3.4"
wasm-bindgen = "=0.2.34" # See https://github.com/rustwasm/wasm-bindgen/issues/1246
png = "0.13.1"
pnglitch-core = { path = "../pnglitch-core" }
rand = "0.6.0"
rand_hc = "0.1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]
