[package]
authors = ["Christopher Shea <cmshea@gmail.com>"]
categories = ["wasm"]
description = "Glitch a png in wasm"
license = "Apache-2.0/MIT"
name = "pnglitch-wasm"
readme = "./README.md"
repository = "https://github.com/tie-rack/pnglitch"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.69"
png = "0.16.8"
pnglitch-core = { path = "../pnglitch-core" }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
